--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -205,6 +205,10 @@ nav {
 
 /* PROJECTS */
 
+.project{
+  margin-bottom: 135px;
+}
+
 .project__img {
   width: 100%;
   transition: all 500ms ease;
@@ -215,6 +219,7 @@ nav {
   border-radius: 12px;
   overflow: hidden;
   position: relative;
+  opacity: 1;
  
 }
 
@@ -227,17 +232,24 @@ nav {
   height: 100%;
   background-color: #1c1d25;
   opacity: 0;
-  transition: opacity 450ms ease;
+  transition: all 450ms ease;
   z-index: 2;
+  transform: translateY(100%);
 }
 
 .project:hover .project__wrapper:before {
+  transform: translateY(0);
   opacity: 0.7;
 }
 
-.project__wrapper:hover .project__img {
+.project:hover .project__img {
   transform: scale(1.07);
   filter: blur(5px);
+}
+
+.project:hover .project__description {
+  opacity: 1;
+  transform: translateY(-50%);
 }
 
 .project__list {
@@ -248,16 +260,18 @@ nav {
   position: absolute;
   top: 50%;
   left: 90px;
-  transform: translateY(-50%);
+  transform: translateY(100%);
   max-width: 550px;
-    z-index: 3;
+  z-index: 3;
+  opacity: 0;
+  transition: transform 450ms, opacity 300ms;
 }
 .project__description--title {
   font-size: 40px;
 }
 
 .project__description--para {
-  margin: 10px 0;
+  margin: 16px 0;
 }
 
 .project__description--link {
@@ -273,4 +287,8 @@ nav {
 .project__description--link {
   text-align: left;
   color: white;
+}
+
+.project:last-child{
+  margin-bottom: 40px;
 }
