--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -5,7 +5,9 @@
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
 }
-
+html{
+  scroll-behavior: smooth;
+}
 h1,
 h2,
 h3,
@@ -13,7 +15,7 @@ h4,
 h5,
 h6,
 span {
-  color: #242424;
+  color: #0a0a0a;
   line-height: 1.25;
   text-align: center;
 }
@@ -21,9 +23,30 @@ span {
 h1 {
   font-size: 36px;
 }
+a{
+  text-decoration: none;
+  position: relative;
+}
+.link__hover-effect:after{
+  content: "";
+  position: absolute;
+  height: 3px;
+  background-color: black;
+  width: 0;
+  bottom: -3px;
+  right: 0;
+  transition: all 300ms ease;
+
+}
+.link__hover-effect:hover:after{
+  width: 100%;
+  left: 0;
+
+}
 p {
   line-height: 1.5;
   font-size: 16px;
+  
 }
 li {
   list-style-type: none;
@@ -73,7 +96,6 @@ nav {
 
 .nav__link--anchor {
   margin: 0 12px;
-  text-decoration: none;
   font-weight: 700;
   color: #242424;
 }
@@ -147,7 +169,6 @@ nav {
 .about-me__link {
   font-size: 20px;
   color: #242424;
-  text-decoration: none;
   padding: 0 16px;
 }
 .about-me__img--container {
@@ -278,7 +299,6 @@ nav {
   font-size: 20px;
   text-decoration: none;
   margin-right: 16px;
-  text-decoration: none;
 }
 
 .project__description--title,
@@ -291,4 +311,56 @@ nav {
 
 .project:last-child{
   margin-bottom: 40px;
+}
+
+/* FOOTER  */
+
+footer{
+  background-color: #242424;
+  
+}
+
+.footer__row{
+  padding: 8% 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.footer__logo--img{
+  width: 70px;
+  height: 70px;
+}
+.footer__social--list{
+  width: 100%;
+  max-width: 500px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer__social--link,
+.footer__copyright,
+.footer__logo--popper{
+  color: white;
+}
+
+.footer__anchor{
+position: relative;
+  margin-bottom: 20px;
+  
+
+
+}
+.footer__logo--popper{
+  color: #fff;
+  position: absolute;
+  right: 0;
+  top: 30px;
+  font-weight: 700;
+  opacity: 0;
+  transition: all 300ms ease;
+}
+.footer__anchor:hover .footer__logo--popper{
+transform: translateX(60px);
+opacity: 1;
 }
