--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -26,16 +26,25 @@ h1 {
 a{
   text-decoration: none;
   position: relative;
+  transition: opacity 300ms ease;
 }
 .link__hover-effect:after{
   content: "";
   position: absolute;
   height: 3px;
-  background-color: black;
+
   width: 0;
   bottom: -3px;
   right: 0;
   transition: all 300ms ease;
+
+}
+.link__hover-effect--white:after{
+  background-color: #fff;
+
+}
+.link__hover-effect--black:after{
+  background-color: black;
 
 }
 .link__hover-effect:hover:after{
@@ -43,11 +52,19 @@ a{
   left: 0;
 
 }
+
+a{
+
+}
+i:hover{
+  opacity: 0.7;
+}
 p {
   line-height: 1.5;
   font-size: 16px;
   
 }
+
 li {
   list-style-type: none;
 }
@@ -144,8 +161,35 @@ nav {
   overflow: hidden;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
   margin-bottom: 28px;
+  animation: animate-profile-picture 800ms 200ms backwards; 
+
+}
+.about-me__info--title{
+  animation: fade-up 650ms 400ms backwards;
+}
+@keyframes animate-profile-picture{
+  0%{
+    transform: scale(0);
+  }
+  80%{
+    transform: scale(1.1);
+  }
+  100%{
+    transform: scale(1);
+  }
 }
 
+@keyframes fade-up {
+  0%{
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
+}
 .about-me__picture {
   width: 100%;
 
@@ -161,26 +205,57 @@ nav {
 .about-me__info-para {
   font-size: 28px;
   margin-bottom: 18px;
+    animation: animate-profile-picture 650ms 600ms backwards; 
+
 }
 
 .about-me__links {
   margin-bottom: 100px;
+    animation: animate-profile-picture 650ms 800ms backwards; 
+
 }
 .about-me__link {
   font-size: 20px;
   color: #242424;
   padding: 0 16px;
+  
 }
 .about-me__img--container {
   flex: 1;
   display: flex;
   align-items: center;
 }
-
+@keyframes fade-in {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+  
+}
 .about-me__img {
   width: 100%;
+  animation: fade-in 1200ms 800ms backwards;
 }
 
+@keyframes animate-wave {
+  0%{
+transform: rotate(0);
+  }
+  50%{
+transform: rotate(30deg);
+
+  }
+  100%{
+transform: rotate(0);
+
+  }
+}
+.wave{
+  display: inline-block;
+  animation: animate-wave 800ms infinite ease-in-out;
+}
 /* TECH STACK  */
 .language {
   width: 25%;
@@ -210,6 +285,10 @@ nav {
 .language__list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  
+
 }
 .language__name {
   position: absolute;
@@ -363,4 +442,57 @@ position: relative;
 .footer__anchor:hover .footer__logo--popper{
 transform: translateX(60px);
 opacity: 1;
+}
+/* Small Phones, Tablets, Large Smartphones  */
+
+
+@media (max-width: 768px) {
+
+  nav{
+height: 68px;
+  }
+  h1{
+    font-size: 28px;
+  }
+  .about-me__info-para{
+    font-size: 18px;
+  }
+  .language{
+    width: calc(100% / 2);
+  }
+  .project__description--para{
+    font-size: 12px;
+  }
+  .project__description{
+    left: 30px;
+    padding-right: 30px;
+  }
+}
+/* SMALL PHONES  */
+
+@media (max-width: 480px){
+.nav__link:not(:last-child){
+  display: none;
+}
+.project__description{
+  padding: 0;
+  left: 0;
+  width: 100%;
+}
+.project__description--para{
+  display: none;
+}
+.project__description--link{
+  display: flex;
+  justify-content: center;
+}
+.project__description--title{
+  line-height: 1;
+  font-size: 32px;
+  text-align: center;
+}
+.project__description--subtitle{
+  text-align: center;
+  margin: 12px 0;
+}
 }
